Add parametrized types to HibernateFactory.listObjectsByNamedQuery()