@@ -21,9 +21,8 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -52,8 +51,7 @@ public class SaltEventFactory extends HibernateFactory {
      */
     @SuppressWarnings("unchecked")
     public static List<Long> countSaltEvents(int queuesCount) {
-        List<Object[]> countObjects = singleton.listObjectsByNamedQuery("SaltEvent.countSaltEvents",
-                    Collections.emptyMap());
+        List<Object[]> countObjects = singleton.listObjectsByNamedQuery("SaltEvent.countSaltEvents", Map.of());
 
         return IntStream.range(0, queuesCount).mapToLong(i -> countObjects.stream()
                 .filter(c -> c[0].equals(i))
@@ -70,10 +68,8 @@ public class SaltEventFactory extends HibernateFactory {
      */
     @SuppressWarnings("unchecked")
     public static Stream<SaltEvent> popSaltEvents(int limit, int queue) {
-        List<Object[]> eventObjects = singleton.listObjectsByNamedQuery(
-                "SaltEvent.popSaltEvents",
-                new HashMap<String, Object>() { { put("limit", limit); put("queue", queue); } }
-        );
+        List<Object[]> eventObjects = singleton.listObjectsByNamedQuery("SaltEvent.popSaltEvents",
+                Map.of("limit", limit, "queue", queue));
 
         return eventObjects.stream()
                 .map(o -> new SaltEvent((long)o[0], (String)o[1], (String)o[2], (int)o[3]));
@@ -86,10 +82,7 @@ public class SaltEventFactory extends HibernateFactory {
      */
     @SuppressWarnings("unchecked")
     public static List<Long> deleteSaltEvents(Collection<Long> ids) {
-        return singleton.listObjectsByNamedQuery(
-                "SaltEvent.deleteSaltEvents",
-                new HashMap<String, Object>() { { put("ids", ids); } }
-        );
+        return singleton.listObjectsByNamedQuery("SaltEvent.deleteSaltEvents", Map.of("ids", ids));
     }
 
     /**
