@@ -65,7 +65,6 @@ import org.hibernate.type.StandardBasicTypes;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -153,10 +152,7 @@ public class ServerFactory extends HibernateFactory {
      * @return List of custom data values.
      */
     public static List<CustomDataValue> lookupCustomDataValues(CustomDataKey key) {
-        Map<String, Object> params = new HashMap<>();
-        params.put("key", key);
-        return SINGLETON.listObjectsByNamedQuery(
-                "CustomDataValue.findByKey", params);
+        return SINGLETON.listObjectsByNamedQuery("CustomDataValue.findByKey", Map.of("key", key));
     }
 
     /**
@@ -165,10 +161,7 @@ public class ServerFactory extends HibernateFactory {
      * @return List of minions.
      */
     public static List<MinionServer> listMinionsByChannel(long cid) {
-        Map<String, Object> params = new HashMap<>();
-        params.put("cid", cid);
-        return SINGLETON.listObjectsByNamedQuery(
-                "Server.listMinionsByChannel", params);
+        return SINGLETON.listObjectsByNamedQuery("Server.listMinionsByChannel", Map.of("cid", cid));
     }
 
     /**
@@ -194,10 +187,7 @@ public class ServerFactory extends HibernateFactory {
      * @return List of devices
      */
     public static List<Device> lookupStorageDevicesByServer(Server s) {
-        Map<String, Object> params = new HashMap<>();
-        params.put("server", s);
-        return SINGLETON.listObjectsByNamedQuery(
-                "Device.findStorageByServer", params);
+        return SINGLETON.listObjectsByNamedQuery("Device.findStorageByServer", Map.of("server", s));
     }
 
     /**
@@ -265,9 +255,7 @@ public class ServerFactory extends HibernateFactory {
      * @return the minion ID to system ID map
      */
     public static Map<String, Long> getMinionIdMap(Long id) {
-        var params = new HashMap<String, Object>();
-        params.put("user_id", id);
-        List<Object[]> result = SINGLETON.listObjectsByNamedQuery("Server.listMinionIdMappings", params);
+        List<Object[]> result = SINGLETON.listObjectsByNamedQuery("Server.listMinionIdMappings", Map.of("user_id", id));
         return result.stream().collect(toMap(
                 row -> (String)(row[0]),
                 row -> (Long)(row[1]))
@@ -527,11 +515,8 @@ public class ServerFactory extends HibernateFactory {
      * @return the ids of the erratas grouped by server id
      */
     public static Map<Long, List<Long>> findUnscheduledErrataByServerIds(User user, List<Long> serverIds) {
-        Map<String, Object> params = new HashMap<>();
-        params.put("user_id", user.getId());
-
-        List<Object[]> result = (SINGLETON.listObjectsByNamedQuery("Server.findUnscheduledErrataByServerIds",
-                params, serverIds, "serverIds"));
+        List<Object[]> result = SINGLETON.listObjectsByNamedQuery("Server.findUnscheduledErrataByServerIds",
+                Map.of("user_id", user.getId()), serverIds, "serverIds");
 
         return result.stream().collect(
                 Collectors.groupingBy(
@@ -561,9 +546,8 @@ public class ServerFactory extends HibernateFactory {
      * @return the list of servers
      */
     public static List<Server> lookupByIdsAndOrg(Set<Long> serverIds, Org org) {
-        Map<String, Object> params = new HashMap<>();
-        params.put("orgId", org.getId());
-        return SINGLETON.listObjectsByNamedQuery("Server.findByIdsAndOrgId", params, serverIds, "serverIds");
+        return SINGLETON.listObjectsByNamedQuery("Server.findByIdsAndOrgId",
+                Map.of("orgId", org.getId()), serverIds, "serverIds");
     }
 
     /**
@@ -572,9 +556,7 @@ public class ServerFactory extends HibernateFactory {
      * @return the list of non-zypper server ids
      */
     public static List<Long> findNonZypperTradClientsIds(Set<Long> ids) {
-        Map<String, Object> params = new HashMap<>();
-        return SINGLETON.listObjectsByNamedQuery("Server.findNonZypperTradClientsIds", params, ids,
-                "serverIds");
+        return SINGLETON.listObjectsByNamedQuery("Server.findNonZypperTradClientsIds", Map.of(), ids, "serverIds");
     }
 
     /**
@@ -892,11 +874,7 @@ public class ServerFactory extends HibernateFactory {
      */
     @SuppressWarnings("unchecked")
     public static ServerArch lookupServerArchByName(String name) {
-        Map<String, Object> params = new HashMap<>();
-        params.put("name", name);
-        List<ServerArch> archs = SINGLETON.listObjectsByNamedQuery(
-                "ServerArch.findByName",
-                params);
+        List<ServerArch> archs = SINGLETON.listObjectsByNamedQuery("ServerArch.findByName", Map.of("name", name));
         if (archs != null && !archs.isEmpty()) {
             return archs.get(0);
         }
@@ -938,11 +916,8 @@ public class ServerFactory extends HibernateFactory {
      * @return list of User objects that can administer the system
      */
     public static List<User> listAdministrators(Server server) {
-        Map<String, Object> params = new HashMap<>();
-        params.put("sid", server.getId());
-        params.put("org_id", server.getOrg().getId());
         return SINGLETON.listObjectsByNamedQuery("Server.lookupAdministrators",
-                params);
+                Map.of("sid", server.getId(), "org_id", server.getOrg().getId()));
     }
 
     /**
@@ -977,11 +952,8 @@ public class ServerFactory extends HibernateFactory {
      * @return a list of Proxy Server objects
      */
     public static List<Server> lookupProxiesByOrg(User user) {
-        Map<String, Object> params = new HashMap<>();
-        params.put("userId", user.getId());
-        params.put("orgId", user.getOrg().getId());
-        List<Number> ids = SINGLETON.listObjectsByNamedQuery(
-                "Server.listProxies", params);
+        List<Number> ids = SINGLETON.listObjectsByNamedQuery("Server.listProxies",
+                Map.of("userId", user.getId(), "orgId", user.getOrg().getId()));
         List<Server> servers = new ArrayList<>(ids.size());
         for (Number id : ids) {
             servers.add(lookupById(id.longValue()));
@@ -1014,10 +986,8 @@ public class ServerFactory extends HibernateFactory {
      * @return List of servers.
      */
     public static List<Server> listSystemsInSsm(User user) {
-        Map<String, Object> params = new HashMap<>();
-        params.put("userId", user.getId());
-        params.put("label", RhnSetDecl.SYSTEMS.getLabel());
-        return SINGLETON.listObjectsByNamedQuery("Server.findInSet", params);
+        return SINGLETON.listObjectsByNamedQuery("Server.findInSet",
+                Map.of("userId", user.getId(), "label", RhnSetDecl.SYSTEMS.getLabel()));
     }
 
     /**
@@ -1027,8 +997,7 @@ public class ServerFactory extends HibernateFactory {
      * @return a list of config enabled systems
      */
     public static List<Server> listConfigEnabledSystems() {
-        return SINGLETON.listObjectsByNamedQuery(
-                "Server.listConfigEnabledSystems", Collections.emptyMap());
+        return SINGLETON.listObjectsByNamedQuery("Server.listConfigEnabledSystems", Map.of());
     }
 
     /**
@@ -1037,9 +1006,7 @@ public class ServerFactory extends HibernateFactory {
      * @return a list of FQDNs
      */
     public static List<String> listFqdns(Long sid) {
-        Map<String, Object> params = new HashMap<>();
-        params.put("sid", sid);
-        return SINGLETON.listObjectsByNamedQuery("Server.listFqdns", params);
+        return SINGLETON.listObjectsByNamedQuery("Server.listFqdns", Map.of("sid", sid));
     }
 
     /**
@@ -1059,8 +1026,7 @@ public class ServerFactory extends HibernateFactory {
      * @return a list of config-diff enabled systems
      */
     public static List<Server> listConfigDiffEnabledSystems() {
-        return SINGLETON.listObjectsByNamedQuery(
-                "Server.listConfigDiffEnabledSystems", Collections.emptyMap());
+        return SINGLETON.listObjectsByNamedQuery("Server.listConfigDiffEnabledSystems", Map.of());
     }
 
     /**
@@ -1093,17 +1059,14 @@ public class ServerFactory extends HibernateFactory {
         if ((startDate != null) && (endDate != null)) {
             params.put("start_date", startDate);
             params.put("end_date", endDate);
-            snaps = SINGLETON.listObjectsByNamedQuery(
-                    "ServerSnapshot.findBetweenDates", params);
+            snaps = SINGLETON.listObjectsByNamedQuery("ServerSnapshot.findBetweenDates", params);
         }
         else if (startDate != null) {
             params.put("start_date", startDate);
-            snaps = SINGLETON.listObjectsByNamedQuery(
-                    "ServerSnapshot.findAfterDate", params);
+            snaps = SINGLETON.listObjectsByNamedQuery("ServerSnapshot.findAfterDate", params);
         }
         else {
-            snaps = SINGLETON.listObjectsByNamedQuery(
-                    "ServerSnapshot.findForServer", params);
+            snaps = SINGLETON.listObjectsByNamedQuery("ServerSnapshot.findForServer", params);
         }
         return snaps;
     }
@@ -1243,9 +1206,7 @@ public class ServerFactory extends HibernateFactory {
      * @return list of tags
      */
     public static List<SnapshotTag> getSnapshotTags(ServerSnapshot snap) {
-        Map<String, Object> params = new HashMap<>();
-        params.put("snap", snap);
-        return SINGLETON.listObjectsByNamedQuery("ServerSnapshot.findTags", params);
+        return SINGLETON.listObjectsByNamedQuery("ServerSnapshot.findTags", Map.of("snap", snap));
     }
 
     /**
@@ -1255,8 +1216,7 @@ public class ServerFactory extends HibernateFactory {
      * @return list of system ids that are linux systems
      */
     public static List<Long> listLinuxSystems(Collection<Long> systemIds) {
-        return SINGLETON.listObjectsByNamedQuery("Server.listRedHatSystems",
-                new HashMap<>(), systemIds, "sids");
+        return SINGLETON.listObjectsByNamedQuery("Server.listRedHatSystems", Map.of(), systemIds, "sids");
     }
 
     /**
@@ -1336,7 +1296,7 @@ public class ServerFactory extends HibernateFactory {
      * @return available contact methods
      */
     public static List<ContactMethod> listContactMethods() {
-        return SINGLETON.listObjectsByNamedQuery("ContactMethod.findAll", null, true);
+        return SINGLETON.listObjectsByNamedQuery("ContactMethod.findAll", Map.of(), true);
     }
 
     /**
@@ -1430,11 +1390,8 @@ public class ServerFactory extends HibernateFactory {
         if (serverIds.isEmpty() || errataIds.isEmpty()) {
             return new HashMap<>();
         }
-        Map<String, Object> params = new HashMap<>();
-        params.put("serverIds", serverIds);
-        params.put("errataIds", errataIds);
-        List<Object[]> result = SINGLETON.listObjectsByNamedQuery(
-                "Server.listErrataNamesForServers", params);
+        List<Object[]> result = SINGLETON.listObjectsByNamedQuery("Server.listErrataNamesForServers",
+                Map.of("serverIds", serverIds, "errataIds", errataIds));
         return result.stream().collect(
             // Group by server id
             Collectors.groupingBy(row -> (Long) row[1],
@@ -1474,11 +1431,8 @@ public class ServerFactory extends HibernateFactory {
         if (serverIds.isEmpty() || errataIds.isEmpty()) {
             return new HashMap<>();
         }
-        Map<String, Object> params = new HashMap<>();
-        params.put("serverIds", serverIds);
-        params.put("errataIds", errataIds);
-        List<Object[]> result = SINGLETON.listObjectsByNamedQuery(
-                "Server.listNewestPkgsForServerErrata", params);
+        List<Object[]> result = SINGLETON.listObjectsByNamedQuery("Server.listNewestPkgsForServerErrata",
+                Map.of("serverIds", serverIds, "errataIds", errataIds));
 
         return result.stream().collect(
                 // Group by server id
@@ -1539,11 +1493,8 @@ public class ServerFactory extends HibernateFactory {
      * given channel
      */
     public static List<Long> findServersInSetByChannel(User user, long channelId) {
-        Map<String, Object> params = new HashMap<>();
-        params.put("user_id", user.getId());
-        params.put("channel_id", channelId);
-        return SINGLETON.listObjectsByNamedQuery(
-                "Server.findServerInSSMByChannel", params);
+        return SINGLETON.listObjectsByNamedQuery("Server.findServerInSSMByChannel",
+                Map.of("user_id", user.getId(), "channel_id", channelId));
 
     }
 
@@ -1565,10 +1516,7 @@ public class ServerFactory extends HibernateFactory {
      * @return List of servers
      */
     public static List<Server> listOrgSystems(long orgId) {
-        Map<String, Object> params = new HashMap<>();
-        params.put("orgId", orgId);
-        return SINGLETON.listObjectsByNamedQuery(
-                "Server.listOrgSystems", params);
+        return SINGLETON.listObjectsByNamedQuery("Server.listOrgSystems", Map.of("orgId", orgId));
     }
 
     /**
